Trying to add image

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .main {
   background: './assets/chest.png';
-  background: './Old Cartoon Room';
+  background: './Old Cartoon Room.jpeg';
 }
 h1{
   color: rgb(247, 249, 251);
